--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                 <a href="#projects" class="w-full md:w-auto text-center bg-accent text-primary border border-accent hover:bg-white px-8 py-3 rounded-full font-semibold transition duration-300">
                     View Projects
                 </a>
-                <a href="https://drive.google.com/open?id=16hanmTGTkrqGpyXn9MBnmRR-Yr3aIfyd&usp=drive_fs" target="_blank" class="w-full md:w-auto text-center flex items-center justify-center gap-2 border border-gray-500 text-gray-300 hover:border-accent hover:text-accent px-8 py-3 rounded-full font-semibold transition duration-300">
-                    <i class="fa-solid fa-file-arrow-down"></i> Download CV
-                </a>
+               <a href="mustafa-cv-mobile-dev.pdf"
+   target="_blank"
+   class="w-full md:w-auto text-center flex items-center justify-center gap-2 border border-gray-500 text-gray-300 hover:border-accent hover:text-accent px-8 py-3 rounded-full font-semibold transition duration-300">
+    <i class="fa-solid fa-file-arrow-down"></i> View CV
+</a>
                 <a href="#contact" class="w-full md:w-auto text-center border border-gray-600 text-gray-300 hover:border-white hover:text-white px-8 py-3 rounded-full font-semibold transition duration-300">
                     Contact Me
                 </a>
